...
				}}
			/>
			<Tab.Screen
				name="ProfileRoutes"
				component={ProfileRoutes}
				options={{
					tabBarTestID: "tab-bar-profile-tab",
					tabBarIcon: ({ focused }) => (
						<Icon
							name="user"
							size={27}
							color={focused ? "contrast" : "darkContrast"}
						/>
...
