...
				<Option
					icon={theme === "dark" ? "moon" : "sun"}
					text="Tema"
					onPress={handleToggleTheme}
				/>
				<Option
					testId="profile-screen-logout-button"
					icon="leave"
					text="Sair da conta"
					onPress={logout}
				/>
			</Box>
		</Container>
...
