appId: com.viniciusbl21.blhomework
name: Forget Password Screen Success
onFlowStart:
    - runFlow: ../../../../testUtils/e2e/setup.yaml

---
- runFlow:
      label: Logout User if Logged In
      when:
          notVisible:
              id: login-screen-navigate-sing-up-button
      file: ../logout/logoutSuccess.yaml

- tapOn:
      id: login-screen-email-input
      label: Focus email input

- inputText:
      text: random@teste.com
      label: Typing random email

- tapOn:
      id: login-screen-forget-password-navigate-button
      label: Navigate to Forget Password Screen

- assertVisible:
      id: forgot-screen-email-input
      text: random@teste.com
      label: Forget Password email input is visible

- tapOn:
      id: forgot-screen-submit-button
      label: Tap on submit button

- assertVisible: E-mail enviado com sucesso!
